--- a/src/gem-serve-page/components/ServeOpContainer.module.css
+++ b/src/gem-serve-page/components/ServeOpContainer.module.css
@@ -3,11 +3,18 @@
 }
 
 .serveOp_container_header {
-  top: 0;
-  margin: 10px;
+  top: -1px;
+  padding: 10px 10px 0 10px;
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  position: sticky;
+  z-index: 50;
+  background-color: #f7f7f7;
+  box-shadow: 0px 8px 15px 19px #f7f7f7;
 }
 
 .serveOp_card_grid_container {
   overflow: scroll;
-  padding: 15px;
+  padding: 30px 15px 15px 15px;
 }
