--- a/src/gem-serve-page/css/ServeApp.css
+++ b/src/gem-serve-page/css/ServeApp.css
@@ -13,6 +13,7 @@
 
 .serveOp h2 {
   font-weight: 700;
+  margin: 10px 0 0 0;
 }
 
 .serveOp p {
